Setup GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
       rel="stylesheet"
       href="/src/styles/main.scss"
     />
+
+    <script
+      src="/src/main.js"
+      type="module"
+      defer
+    ></script>
   </head>
   <body id="body">
     <header
@@ -707,10 +713,5 @@
         </section>
       </div>
     </div>
-
-    <script
-      src="/src/main.js"
-      type="module"
-    ></script>
   </body>
 </html>
