Enable eager loading for critical images to fix missing images on mobile devices

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               src="/images/clouds/main-cloud.png"
               class="luxury__cloud"
               alt=""
-              loading="lazy"
+              loading="eager"
             />
           </picture>
 
@@ -266,7 +266,7 @@
               src="/images/plane/luxury-plane.png"
               class="luxury__plane"
               alt="Sleek luxury private jet soaring through clouds"
-              loading="lazy"
+              loading="eager"
             />
           </picture>
         </section>
@@ -296,7 +296,7 @@
                 src="/images/plane/loyalty-plane.png"
                 class="loyalty__plane"
                 alt="Private jet in flight demonstrating our instant booking service"
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -309,7 +309,7 @@
                 src="/images/clouds/right-cloud.png"
                 class="loyalty__cloud fade-in"
                 alt=""
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -355,7 +355,7 @@
                 src="/images/plane/costs-plane.png"
                 class="costs__plane"
                 alt="Private jet showcasing our affordable pricing"
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -427,7 +427,7 @@
                     src="/images/plane/apply-plane-1.png"
                     class="apply__first-plane"
                     alt="Tail section of a luxury private jet"
-                    loading="lazy"
+                    loading="eager"
                   />
                 </picture>
               </div>
@@ -443,7 +443,7 @@
                       src="/images/plane/apply-plane-2.png"
                       class="apply__second-plane"
                       alt="Turbine engine of a private jet"
-                      loading="lazy"
+                      loading="eager"
                     />
                   </picture>
                   <div class="apply__title apply__title--light">
