deploy: e7518b80c8fae9839a0a3345f8a4ca07fa231d1c

--- a/404.html
+++ b/404.html
@@ -242,7 +242,7 @@
               src="/lets-fly-landing/images/clouds/main-cloud.png"
               class="luxury__cloud"
               alt=""
-              loading="lazy"
+              loading="eager"
             />
           </picture>
 
@@ -255,7 +255,7 @@
               src="/lets-fly-landing/images/plane/luxury-plane.png"
               class="luxury__plane"
               alt="Sleek luxury private jet soaring through clouds"
-              loading="lazy"
+              loading="eager"
             />
           </picture>
         </section>
@@ -285,7 +285,7 @@
                 src="/lets-fly-landing/images/plane/loyalty-plane.png"
                 class="loyalty__plane"
                 alt="Private jet in flight demonstrating our instant booking service"
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -298,7 +298,7 @@
                 src="/lets-fly-landing/images/clouds/right-cloud.png"
                 class="loyalty__cloud fade-in"
                 alt=""
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -344,7 +344,7 @@
                 src="/lets-fly-landing/images/plane/costs-plane.png"
                 class="costs__plane"
                 alt="Private jet showcasing our affordable pricing"
-                loading="lazy"
+                loading="eager"
               />
             </picture>
 
@@ -416,7 +416,7 @@
                     src="/lets-fly-landing/images/plane/apply-plane-1.png"
                     class="apply__first-plane"
                     alt="Tail section of a luxury private jet"
-                    loading="lazy"
+                    loading="eager"
                   />
                 </picture>
               </div>
@@ -432,7 +432,7 @@
                       src="/lets-fly-landing/images/plane/apply-plane-2.png"
                       class="apply__second-plane"
                       alt="Turbine engine of a private jet"
-                      loading="lazy"
+                      loading="eager"
                     />
                   </picture>
                   <div class="apply__title apply__title--light">
